--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -26,6 +26,8 @@ services:
   order-db:
     image: postgres:11.1-alpine
     env_file: .env
+    ports:
+      - 5432:5432
     environment:
       - POSTGRES_DB=${POSTGRES_ORDER_DB}
     volumes:
@@ -34,6 +36,8 @@ services:
   payment-db:
     image: postgres:11.1-alpine
     env_file: .env
+    ports:
+      - 5433:5432
     environment:
       - POSTGRES_DB=${POSTGRES_PAYMENT_DB}
     volumes:
