--- a/order-service/package.json
+++ b/order-service/package.json
@@ -22,13 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/microservices": "^5.5.0",
+    "@nestjs/typeorm": "^5.2.2",
+    "mysql": "^2.16.0",
+    "pg": "^7.8.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.11",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
+    "@nestjs/testing": "^5.5.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
