--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/microservices": "^5.5.0",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
