--- a/order-service/package.json
+++ b/order-service/package.json
@@ -17,13 +17,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/microservices": "^5.5.0",
     "@nestjs/typeorm": "^5.2.2",
+    "config": "^2.0.1",
     "mysql": "^2.16.0",
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.12",
