--- a/order-service/tsconfig.json
+++ b/order-service/tsconfig.json
@@ -11,7 +11,8 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "lib": ["es7"]
   },
   "exclude": ["node_modules"]
 }
