add docker prod images building

--- a/docker/test/Dockerfile.order
+++ b/docker/test/Dockerfile.order
@@ -1,11 +1,12 @@
 FROM node:11.6.0
 LABEL maintainer="alexkomp.ua@gmail.com"
 
-COPY docker/dev/scripts/entrypoint.order.sh /usr/local/bin/entrypoint.sh
+COPY docker/test/scripts/entrypoint.order.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT ["entrypoint.sh"]
-CMD ["npm", "run", "test"]
+CMD ["npm", "run", "test:all"]
 
 COPY order-service /application
+RUN rm -rf /application/node_modules
 WORKDIR /application
