--- a/order-service/tsconfig.json
+++ b/order-service/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "lib": ["es7"]
+    "lib": ["es7", "dom"]
   },
   "exclude": ["node_modules"]
 }
