--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -10,16 +10,14 @@ services:
       - 3000:${SERVICE_PORT}
     depends_on:
       - order-db
-    command: bash -c 'cd /app && npm run start:dev'
+    command: bash -c 'cd /app && npm i && npm run start:dev'
 
   payment:
     image: node:11.6.0
     env_file: .env
     volumes: 
       - ../../payment-service:/app
-    # ports:
-    #   - 3001:${SERVICE_PORT}
-    command: bash -c 'cd /app && npm run start:dev'
+    command: bash -c 'cd /app && npm i && npm run start:dev'
 
   order-db:
     image: postgres:11.1-alpine
